add custom input

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="absolute pt-2 pl-3 text-xl">
                         $
                     </div>
-                    <input id="input__fild" onchange="handleDisplayChange(event)" 
+                    <input id="input__fild" onchange="handleDisplayChange(event)"
                         class="size-full border border-gray-300 rounded-md font-md py-2 mb-3 text-end text-xl pr-2"
                         type="number" placeholder="0">
                 </div>
@@ -53,7 +53,7 @@
                         <button value="50" class="input__button bg-cyan-900 mx-3 p-2 rounded-md text-white text-xl my-5 font-bold 
                                  hover:bg-cyan-500 text-blue-950/100">50%</button>
 
-                        <input
+                        <input id="customNumber" 
                             class="bg-transparent border border-gray-500 mx-3 p-2 rounded-md text-gray-400 text-xl my-5 font-bold "
                             type="text" placeholder="Custom">
                     </div>
@@ -63,8 +63,8 @@
                         <div class="absolute mt-3 ml-3">
                             <i class="fa-solid fa-user"></i>
                         </div>
-                        <input class="border border-gray-400 size-full rounded-md p-2 text-end text-xl" type="text"
-                            placeholder="0">
+                        <!-- <input class="border border-gray-400 size-full rounded-md p-2 text-end text-xl" type="text"
+                            placeholder="0"> -->
 
 
                 </section>
